// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attack scenarios > big_plains equal 20k tiles each, 1M vs 1M, attack 200k 1`] = `
{
  "attackerLossPerSecond": 10200,
  "attackerLossPerTile": 105.2,
  "attackerTiles": 20000,
  "attackerTroopsLost": 200000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 4852,
  "defenderLossPerTile": 50,
  "defenderTiles": 20000,
  "defenderTroopsLost": 95100,
  "finished": true,
  "ticks": 196,
  "tilesConquered": 1902,
  "tilesPerSecond": 97.04,
}
`;

exports[`attack scenarios > big_plains equal 20k tiles each, 200k vs 200k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 7407,
  "attackerLossPerTile": 80.16,
  "attackerTiles": 20000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 924.1,
  "defenderLossPerTile": 10,
  "defenderTiles": 20000,
  "defenderTroopsLost": 4990,
  "finished": true,
  "ticks": 54,
  "tilesConquered": 499,
  "tilesPerSecond": 92.41,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M troops all-in vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 90720,
  "attackerLossPerTile": 8.119,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 3746588,
  "defenderEliminated": false,
  "defenderLossPerSecond": 17910,
  "defenderLossPerTile": 1.603,
  "defenderTiles": 591663,
  "defenderTroopsLost": 739638,
  "finished": true,
  "ticks": 413,
  "tilesConquered": 461482,
  "tilesPerSecond": 11170,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M vs 8M troops, attack 2M 1`] = `
{
  "attackerLossPerSecond": 60790,
  "attackerLossPerTile": 32.25,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 2000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 24520,
  "defenderLossPerTile": 13.01,
  "defenderTiles": 591663,
  "defenderTroopsLost": 806567,
  "finished": true,
  "ticks": 329,
  "tilesConquered": 62019,
  "tilesPerSecond": 1885,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 4M (10k/tile) 1`] = `
{
  "attackerLossPerSecond": 1555000,
  "attackerLossPerTile": 4810,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 1866286,
  "defenderEliminated": true,
  "defenderLossPerSecond": 2483000,
  "defenderLossPerTile": 7679,
  "defenderTiles": 388,
  "defenderTroopsLost": 2979310,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 388,
  "tilesPerSecond": 323.3,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 400k (1k/tile) 1`] = `
{
  "attackerLossPerSecond": 144800,
  "attackerLossPerTile": 149.3,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 57911,
  "defenderEliminated": true,
  "defenderLossPerSecond": 744800,
  "defenderLossPerTile": 767.9,
  "defenderTiles": 388,
  "defenderTroopsLost": 297931,
  "finished": true,
  "ticks": 4,
  "tilesConquered": 388,
  "tilesPerSecond": 970,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 1M troops all-in vs 1M-tile defender with 1M 1`] = `
{
  "attackerLossPerSecond": 20490,
  "attackerLossPerTile": 42.91,
  "attackerTiles": 388,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 272.2,
  "defenderLossPerTile": 0.5701,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 13285,
  "finished": true,
  "ticks": 488,
  "tilesConquered": 23303,
  "tilesPerSecond": 477.5,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 100k troops, attack 50k vs 1M-tile sparse defender with 1M 1`] = `
{
  "attackerLossPerSecond": 1497,
  "attackerLossPerTile": 53.42,
  "attackerTiles": 388,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0.1497,
  "defenderLossPerTile": 0.005342,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 5,
  "finished": true,
  "ticks": 334,
  "tilesConquered": 936,
  "tilesPerSecond": 28.02,
}
`;

exports[`attack scenarios > giant 600k vs 1M tiles, 1M troops attack 500k vs 8M defender 1`] = `
{
  "attackerLossPerSecond": 13400,
  "attackerLossPerTile": 33.71,
  "attackerTiles": 591663,
  "attackerTroopsLost": 500000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2785,
  "defenderLossPerTile": 7.002,
  "defenderTiles": 1010406,
  "defenderTroopsLost": 103864,
  "finished": true,
  "ticks": 373,
  "tilesConquered": 14833,
  "tilesPerSecond": 397.7,
}
`;

exports[`attack scenarios > plains 1-troop attack vs 50k defender 1`] = `
{
  "attackerLossPerSecond": 3.333,
  "attackerLossPerTile": 1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1,
  "defenderEliminated": false,
  "defenderLossPerSecond": 33.33,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 10,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 10M-troop attack vs defender with 1 troop 1`] = `
{
  "attackerLossPerSecond": 14720,
  "attackerLossPerTile": 21.78,
  "attackerTiles": 5000,
  "attackerTroopsLost": 108896,
  "defenderEliminated": true,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 74,
  "tilesConquered": 5000,
  "tilesPerSecond": 675.7,
}
`;

exports[`attack scenarios > plains 50k attack vs defender with 0 troops 1`] = `
{
  "attackerLossPerSecond": 14290,
  "attackerLossPerTile": 22.21,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 35,
  "tilesConquered": 2251,
  "tilesPerSecond": 643.1,
}
`;

exports[`attack scenarios > plains 100-tile turtle, 1M troops: conquered outright after one tile 1`] = `
{
  "attackerLossPerSecond": 31580,
  "attackerLossPerTile": 63.15,
  "attackerTiles": 9900,
  "attackerTroopsLost": 6315,
  "defenderEliminated": true,
  "defenderLossPerSecond": 50000,
  "defenderLossPerTile": 100,
  "defenderTiles": 100,
  "defenderTroopsLost": 10000,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 100,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 100-troop attack vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 333.3,
  "attackerLossPerTile": 100,
  "attackerTiles": 5000,
  "attackerTroopsLost": 100,
  "defenderEliminated": false,
  "defenderLossPerSecond": 666.7,
  "defenderLossPerTile": 200,
  "defenderTiles": 5000,
  "defenderTroopsLost": 200,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 4M troops (10k/tile) under a defense post, attacked with 1M 1`] = `
{
  "attackerLossPerSecond": 588200,
  "attackerLossPerTile": 31250,
  "attackerTiles": 9600,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 188200,
  "defenderLossPerTile": 10000,
  "defenderTiles": 400,
  "defenderTroopsLost": 320000,
  "finished": true,
  "ticks": 17,
  "tilesConquered": 32,
  "tilesPerSecond": 18.82,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 400k troops (1k/tile), attacked with 400k 1`] = `
{
  "attackerLossPerSecond": 77570,
  "attackerLossPerTile": 193.9,
  "attackerTiles": 9600,
  "attackerTroopsLost": 77569,
  "defenderEliminated": true,
  "defenderLossPerSecond": 301000,
  "defenderLossPerTile": 752.5,
  "defenderTiles": 400,
  "defenderTroopsLost": 301000,
  "finished": true,
  "ticks": 10,
  "tilesConquered": 400,
  "tilesPerSecond": 400,
}
`;

exports[`attack scenarios > plains big attacker (9500 tiles) vs small defender (500 tiles) 1`] = `
{
  "attackerLossPerSecond": 7143,
  "attackerLossPerTile": 135.1,
  "attackerTiles": 9500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 5286,
  "defenderLossPerTile": 100,
  "defenderTiles": 500,
  "defenderTroopsLost": 7400,
  "finished": true,
  "ticks": 14,
  "tilesConquered": 74,
  "tilesPerSecond": 52.86,
}
`;

exports[`attack scenarios > plains bot vs human defender 1`] = `
{
  "attackerLossPerSecond": 4167,
  "attackerLossPerTile": 80,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 520.8,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1250,
  "finished": true,
  "ticks": 24,
  "tilesConquered": 125,
  "tilesPerSecond": 52.08,
}
`;

exports[`attack scenarios > plains bot vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 400,
  "attackerLossPerTile": 8,
  "attackerTiles": 1000,
  "attackerTroopsLost": 2000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 50,
  "tilesConquered": 250,
  "tilesPerSecond": 50,
}
`;

exports[`attack scenarios > plains defender with defense posts covering the whole border 1`] = `
{
  "attackerLossPerSecond": 9091,
  "attackerLossPerTile": 400,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 227.3,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 250,
  "finished": true,
  "ticks": 11,
  "tilesConquered": 25,
  "tilesPerSecond": 22.73,
}
`;

exports[`attack scenarios > plains defender with one defense post at the border 1`] = `
{
  "attackerLossPerSecond": 7692,
  "attackerLossPerTile": 256.4,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 300,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 390,
  "finished": true,
  "ticks": 13,
  "tilesConquered": 39,
  "tilesPerSecond": 30,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 19680,
  "attackerLossPerTile": 29.12,
  "attackerTiles": 5000,
  "attackerTroopsLost": 145599,
  "defenderEliminated": true,
  "defenderLossPerSecond": 26490,
  "defenderLossPerTile": 39.21,
  "defenderTiles": 5000,
  "defenderTroopsLost": 196040,
  "finished": true,
  "ticks": 74,
  "tilesConquered": 5000,
  "tilesPerSecond": 675.7,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 6173,
  "attackerLossPerTile": 99.01,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2494,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 20200,
  "finished": true,
  "ticks": 81,
  "tilesConquered": 505,
  "tilesPerSecond": 62.35,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 19230,
  "attackerLossPerTile": 65.72,
  "attackerTiles": 5000,
  "attackerTroopsLost": 200000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 11700,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 121720,
  "finished": true,
  "ticks": 104,
  "tilesConquered": 3043,
  "tilesPerSecond": 292.6,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 14020,
  "attackerLossPerTile": 88.18,
  "attackerTiles": 5000,
  "attackerTroopsLost": 150000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 6359,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 68040,
  "finished": true,
  "ticks": 107,
  "tilesConquered": 1701,
  "tilesPerSecond": 159,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 10k 1`] = `
{
  "attackerLossPerSecond": 4167,
  "attackerLossPerTile": 80,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 520.8,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1250,
  "finished": true,
  "ticks": 24,
  "tilesConquered": 125,
  "tilesPerSecond": 52.08,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 25k 1`] = `
{
  "attackerLossPerSecond": 7353,
  "attackerLossPerTile": 80.13,
  "attackerTiles": 5000,
  "attackerTroopsLost": 25000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 917.6,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3120,
  "finished": true,
  "ticks": 34,
  "tilesConquered": 312,
  "tilesPerSecond": 91.76,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 50k (all-in) 1`] = `
{
  "attackerLossPerSecond": 11630,
  "attackerLossPerTile": 62.11,
  "attackerTiles": 5000,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1872,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 8050,
  "finished": true,
  "ticks": 43,
  "tilesConquered": 805,
  "tilesPerSecond": 187.2,
}
`;

exports[`attack scenarios > plains human vs bot defender 1`] = `
{
  "attackerLossPerSecond": 2941,
  "attackerLossPerTile": 56.18,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 523.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1780,
  "finished": true,
  "ticks": 34,
  "tilesConquered": 178,
  "tilesPerSecond": 52.35,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 800,
  "attackerLossPerTile": 16,
  "attackerTiles": 1000,
  "attackerTroopsLost": 2000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 125,
  "tilesPerSecond": 50,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 3571,
  "attackerLossPerTile": 16,
  "attackerTiles": 1000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 56,
  "tilesConquered": 1250,
  "tilesPerSecond": 223.2,
}
`;

exports[`attack scenarios > plains nation vs bot defender 1`] = `
{
  "attackerLossPerSecond": 2941,
  "attackerLossPerTile": 56.18,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 523.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1780,
  "finished": true,
  "ticks": 34,
  "tilesConquered": 178,
  "tilesPerSecond": 52.35,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 4k 1`] = `
{
  "attackerLossPerSecond": 1481,
  "attackerLossPerTile": 97.56,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 607.4,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1640,
  "finished": true,
  "ticks": 27,
  "tilesConquered": 41,
  "tilesPerSecond": 15.19,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 20k (all-in) 1`] = `
{
  "attackerLossPerSecond": 3922,
  "attackerLossPerTile": 99.01,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1584,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 8080,
  "finished": true,
  "ticks": 51,
  "tilesConquered": 202,
  "tilesPerSecond": 39.61,
}
`;

exports[`attack scenarios > plains overwhelming 200k vs 20k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 13330,
  "attackerLossPerTile": 33.78,
  "attackerTiles": 5000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1579,
  "defenderLossPerTile": 4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 4736,
  "finished": true,
  "ticks": 30,
  "tilesConquered": 1184,
  "tilesPerSecond": 394.7,
}
`;

exports[`attack scenarios > plains small attacker (500 tiles) vs big defender (9500 tiles) 1`] = `
{
  "attackerLossPerSecond": 3846,
  "attackerLossPerTile": 76.92,
  "attackerTiles": 500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 250,
  "defenderLossPerTile": 5,
  "defenderTiles": 9500,
  "defenderTroopsLost": 650,
  "finished": true,
  "ticks": 26,
  "tilesConquered": 130,
  "tilesPerSecond": 50,
}
`;

exports[`attack scenarios > plains traitor defender 1`] = `
{
  "attackerLossPerSecond": 2564,
  "attackerLossPerTile": 40.16,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 638.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 2490,
  "finished": true,
  "ticks": 39,
  "tilesConquered": 249,
  "tilesPerSecond": 63.85,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 30830,
  "attackerLossPerTile": 45.63,
  "attackerTiles": 5000,
  "attackerTroopsLost": 228173,
  "defenderEliminated": true,
  "defenderLossPerSecond": 86100,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637147,
  "finished": true,
  "ticks": 74,
  "tilesConquered": 5000,
  "tilesPerSecond": 675.7,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 10160,
  "attackerLossPerTile": 155.1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 162500,
  "defenderEliminated": false,
  "defenderLossPerSecond": 8515,
  "defenderLossPerTile": 130,
  "defenderTiles": 5000,
  "defenderTroopsLost": 136240,
  "finished": true,
  "ticks": 160,
  "tilesConquered": 1048,
  "tilesPerSecond": 65.5,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 35860,
  "attackerLossPerTile": 55.94,
  "attackerTiles": 5000,
  "attackerTroopsLost": 279721,
  "defenderEliminated": true,
  "defenderLossPerSecond": 81680,
  "defenderLossPerTile": 127.4,
  "defenderTiles": 5000,
  "defenderTroopsLost": 637130,
  "finished": true,
  "ticks": 78,
  "tilesConquered": 5000,
  "tilesPerSecond": 641,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 32720,
  "attackerLossPerTile": 119.3,
  "attackerTiles": 5000,
  "attackerTroopsLost": 487500,
  "defenderEliminated": false,
  "defenderLossPerSecond": 35650,
  "defenderLossPerTile": 130,
  "defenderTiles": 5000,
  "defenderTroopsLost": 531180,
  "finished": true,
  "ticks": 149,
  "tilesConquered": 4086,
  "tilesPerSecond": 274.2,
}
`;

exports[`attack scenarios > world highland/mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 5000,
  "attackerLossPerTile": 115.6,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 865,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3460,
  "finished": true,
  "ticks": 40,
  "tilesConquered": 173,
  "tilesPerSecond": 43.25,
}
`;

exports[`attack scenarios > world huge empires (~150k tiles each), 2M vs 2M, attack 400k 1`] = `
{
  "attackerLossPerSecond": 11460,
  "attackerLossPerTile": 87.43,
  "attackerTiles": 108968,
  "attackerTroopsLost": 400000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2098,
  "defenderLossPerTile": 16.01,
  "defenderTiles": 121741,
  "defenderTroopsLost": 73224,
  "finished": true,
  "ticks": 349,
  "tilesConquered": 4575,
  "tilesPerSecond": 131.1,
}
`;

exports[`attack scenarios > world mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4878,
  "attackerLossPerTile": 121.2,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 804.9,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3300,
  "finished": true,
  "ticks": 41,
  "tilesConquered": 165,
  "tilesPerSecond": 40.24,
}
`;

exports[`attack scenarios > world mountain region, human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 11760,
  "attackerLossPerTile": 22,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 17,
  "tilesConquered": 909,
  "tilesPerSecond": 534.7,
}
`;

exports[`attack scenarios > world plains-ish region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4762,
  "attackerLossPerTile": 93.9,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1014,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 4260,
  "finished": true,
  "ticks": 42,
  "tilesConquered": 213,
  "tilesPerSecond": 50.71,
}
`;
